# learning_journey_cohere

./: LICENSE  README.md
document_clustering/: document_clustering.py  results.xlsx
document_clustering/Data/: 20220602_Rust in Python, or the rustification of Python.txt  20220712_Trustworthy AI – the holistic framework and what parts of it will be tested in future.txt  20220923_Trustworthy AI – a wild tension between human and machine interaction.txt  20220929_A brief introduction to explainable AI.txt  20221223_Trustworthy AI – user-centred requirements.txt  20230103_How Father Christmas plans his route.txt  20230127_Stack Overflow Developer Survey 2022 – Part 2.txt  20230209_Rewriting code in Rust.txt  20230214_Computer vision for deep learning – a brief introduction.txt  20230315_Stack Overflow Developer Survey 2022 – Part 1.txt  20230410_A look back the highlights from the world of AI in 2022.txt  20230503_A rough guide to the vast jungle of AI language models.txt  20230526_A brief introduction to programming languages.txt  20230710_A brief introduction to automatic document processing with large language models.txt  20230725_Prefect.txt  20230809_A clever way to retrieve information.txt  20230827_AI buzzword bingo.txt  (+15 more)
document_clustering_viz/: app.py  combine_script.py  requirements.txt
mockup_rag/: pyproject.toml
mockup_rag/archive/: cache_vectors.py  opensearch_embedding_lc.py
mockup_rag/data/: response_discoveryv2_asylgesetz_paragraph_split.csv
mockup_rag/mockup_rag/: app.py  config.py  create_indexing.py  utils.py
mockup_rag/notebooks/: demo.ipynb
